# python-project-lvl2

./: Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-package.yml
gendiff/: cli.py  formatter.py  gendiff.py  parser.py  tree.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: file3.yaml  result12treejson.txt  result34.txt  result43.txt
tests/: conftest.py  test_gendiff.py  test_render_json.py  test_render_plain.py  test_render_stylish.py  test_render_stylish_plian.py
tests/fixtures/: file4.yaml  jsontree
